# PrismLauncher-for-XylarJava

./: .clang-format  .clang-tidy  .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlintignore  App.axaml  App.axaml.cs  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING.md  Containerfile  LICENSE  LiquidGlassEffects.cs  MainWindow.axaml  MainWindow.axaml.cs  ModpackModels.cs  ModrinthModpackInstaller.cs  ModrinthPackIndexReader.cs  PlayProfile.cs  Program.cs  README.md  XylarJavaLauncher.csproj  compile.bat  default.nix  flake.nix  shell.nix  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml  suggestion.yml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: backport.yml  blocked-prs.yml  build.yml  codeql.yml  container.yml  merge-blocking-pr.yml  nix.yml  publish.yml  release.yml  stale.yml  update-flake.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
cmake/vcpkg-ports/vcpkg-tool-meson/: README.md  portfile.cmake  universal-osx.patch
cmake/vcpkg-triplets/: universal-osx.cmake
launcher/: Application.cpp  Application.h  AssertHelpers.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  CMakeLists.txt  DataMigrationTask.cpp  DataMigrationTask.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  Filter.h  GZip.cpp  GZip.h  InstanceCopyPrefs.cpp  InstanceCopyPrefs.h  InstanceCopyTask.cpp  InstanceCopyTask.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstancePageProvider.h  InstanceTask.cpp  InstanceTask.h  JavaCommon.cpp  JavaCommon.h  Json.cpp  Json.h  LaunchController.cpp  LaunchController.h  LaunchMode.h  (+29 more)
launcher/archive/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  ExportToZipTask.cpp  ExportToZipTask.h  ExtractZipTask.cpp  ExtractZipTask.h
launcher/console/: Console.h  WindowsConsole.cpp  WindowsConsole.h
launcher/filelink/: FileLink.cpp  FileLink.h  filelink_main.cpp
launcher/icons/: IconList.cpp  IconList.h
launcher/include/: base.pch.hpp  qtcore.pch.hpp  qtgui.pch.hpp
launcher/java/: JavaChecker.cpp  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaMetadata.cpp  JavaMetadata.h  JavaUtils.cpp  JavaVersion.cpp  JavaVersion.h
launcher/java/download/: ArchiveDownloadTask.cpp  ArchiveDownloadTask.h  ManifestDownloadTask.cpp  ManifestDownloadTask.h  SymlinkTask.cpp  SymlinkTask.h
launcher/launch/: LaunchStep.h  LaunchTask.cpp  LaunchTask.h  LogModel.cpp  LogModel.h  TaskStepWrapper.cpp
launcher/launch/steps/: CheckJava.cpp  LookupServerAddress.cpp  PostLaunchCommand.cpp  PreLaunchCommand.cpp  TextPrint.cpp  TextPrint.h
launcher/logs/: AnonymizeLog.cpp  AnonymizeLog.h  LogParser.cpp  LogParser.h
launcher/macsandbox/: SecurityBookmarkFileAccess.h  SecurityBookmarkFileAccess.mm
launcher/meta/: BaseEntity.cpp  Index.cpp  Index.h  JsonFormat.cpp  Version.cpp  Version.h  VersionList.cpp  VersionList.h
launcher/minecraft/: AssetsUtils.cpp  Component.cpp  Component.h  ComponentUpdateTask.cpp  ComponentUpdateTask.h  ComponentUpdateTask_p.h  GradleSpecifier.h  Library.cpp  Library.h  Logging.cpp  Logging.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.cpp  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  PackProfile.h  ProfileUtils.cpp  Rule.cpp  Rule.h  ShortcutUtils.cpp  ShortcutUtils.h  VanillaInstanceCreationTask.cpp  VanillaInstanceCreationTask.h  World.cpp  World.h  WorldList.cpp  WorldList.h
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  (+10 more)
launcher/modplatform/: CheckUpdateTask.h  EnsureMetadataTask.cpp  EnsureMetadataTask.h  ModIndex.cpp  ModIndex.h  ResourceAPI.cpp  ResourceAPI.h  ResourceType.cpp  ResourceType.h
launcher/net/: ApiDownload.cpp  ApiDownload.h  ApiUpload.cpp  ApiUpload.h  ByteArraySink.h  Download.cpp  Download.h  DummySink.h  FileSink.cpp  FileSink.h  HttpMetaCache.cpp  HttpMetaCache.h  MetaCacheSink.cpp  NetJob.cpp  NetJob.h  NetRequest.cpp  NetRequest.h  PasteUpload.cpp  PasteUpload.h  Upload.cpp  Upload.h
launcher/news/: NewsChecker.cpp  NewsChecker.h
launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurUpload.cpp
launcher/settings/: INIFile.cpp  SettingsObject.cpp  SettingsObject.h
launcher/tasks/: ConcurrentTask.cpp  ConcurrentTask.h  SequentialTask.cpp  Task.cpp  Task.h
launcher/tools/: BaseExternalTool.cpp  BaseExternalTool.h  BaseProfiler.cpp  BaseProfiler.h  GenericProfiler.cpp  GenericProfiler.h  JProfiler.cpp  JProfiler.h  JVisualVM.cpp  JVisualVM.h  MCEditTool.cpp  MCEditTool.h
launcher/translations/: POTranslator.cpp  TranslationsModel.cpp  TranslationsModel.h
launcher/ui/: GuiUtil.cpp  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ToolTipFilter.cpp  ToolTipFilter.h  ViewLogWindow.cpp  ViewLogWindow.h
launcher/updater/: MacSparkleUpdater.mm  PrismExternalUpdater.cpp
libraries/: README.md
libraries/LocalPeer/: CMakeLists.txt
libraries/javacheck/: CMakeLists.txt
libraries/launcher/: CMakeLists.txt
libraries/murmur2/: CMakeLists.txt
libraries/qdcss/: CMakeLists.txt
libraries/qdcss/src/: qdcss.cpp
libraries/rainbow/: CMakeLists.txt
nix/: README.md  unwrapped.nix  wrapper.nix
program_info/: CMakeLists.txt  genicons.sh  org.prismlauncher.PrismLauncher.desktop.in  org.prismlauncher.PrismLauncher.metainfo.xml.in  prismlauncher.manifest.in  prismlauncher.qrc.in  prismlauncher.rc.in  win_install.nsi.in
program_info/PrismLauncher.icon/: icon.json
scripts/: compress_images.sh
tests/: CMakeLists.txt  FileSystem_test.cpp  INIFile_test.cpp  Library_test.cpp  MetaComponentParse_test.cpp  MojangVersionFormat_test.cpp  Packwiz_test.cpp  ResourceFolderModel_test.cpp  ResourcePackParse_test.cpp  Task_test.cpp  Version_test.cpp  XmlLogs_test.cpp
tools/: ninjatracing.py
(+440 files in other folders)
